# hezhou

./: .gitignore  README.md
demo/callback/csharp/: CallbackNative.cs  CallbackTest.csproj  Program.cs
demo/callback/rust/: Cargo.toml  build.rs
demo/callback/rust/src/: lib.rs
demo/csharp/: .gitignore  CsharpCaller.csproj  CsharpCaller.csproj.lscache  Program.cs
demo/csharp/CsharpCaller/: NativeMethods.cs
demo/csharp/Scripts/: MyGameScripts.cs  Test.cs
demo/harmony/: hvigorw.bat
demo/harmony/AppScope/resources/base/media/: layered_image.json
demo/harmony/entry/: build-profile.json5
demo/harmony/entry/src/main/: module.json5
demo/harmony/entry/src/main/cpp/: CMakeLists.txt  native_rust.cpp
demo/harmony/entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
demo/harmony/entry/src/main/ets/pages/: Index.ets
demo/harmony/entry/src/main/libs/: README.md
demo/harmony/tools/: build_all.ps1  build_and_copy_so.ps1  build_harmony.ps1  hdc_debug.ps1  sign_hap.ps1
demo/rust/: Cargo.toml  build.rs
demo/rust/src/: lib.rs  main.rs
demo/rust/tools/: RustMirror.ps1  build_harmony.ps1  build_windows.ps1
design/: Rust动态加载CSharp示例.md  Rust开发环境配置要点.md  dfx_design.md  engine_modules_design.md  features_tree.md  platform_abstraction_design.md  progress.md  test  ui_system_design.md  脚本系统实现计划.md
docs/: game_preview_fxaa.md
engine/: .gitignore  AGENTS.md  Cargo.toml
engine/core/: Cargo.toml
engine/core/src/: ffi.rs  lib.rs  time_loop.rs
engine/core/src/ecs/: component.rs  entity.rs  mod.rs  system.rs  world.rs
engine/core/src/event/: bus.rs  dispatcher.rs  mod.rs  queue.rs
engine/core/src/math/: mat.rs  mod.rs  quat.rs  transform.rs  vec.rs
engine/dfx/: Cargo.toml  crash_report.txt
engine/dfx/src/: crash.rs  lib.rs  log_types.rs  logger.rs  perf.rs  trace.rs
engine/dfx/tests/: dfx_test.rs
engine/docs/: csharp_ui_architecture_design.md  thunk_mono_jit_ui_debug_summary.md  ui_architecture.md  ui_click_callback.md  vstack_hstack_layout.md
engine/examples/: Cargo.toml  build.rs
engine/examples/src/: engine_demo.rs  glfw_demo.rs  mono_editor_demo.rs  mono_hot_reload_test.rs  mono_rotation_demo.rs  mono_triangle_demo.rs  mono_ui_demo.rs  mono_ui_thunk_demo.rs  rotation_demo.rs  screenshot_demo.rs  trace_viewer_demo.rs  triangle_demo.rs  ui_vulkan_demo.rs  vulkan_render_demo.rs  vulkan_triangle_demo.rs
engine/geometry/: Cargo.toml
engine/geometry/src/: bounding.rs  lib.rs  mesh.rs  primitive.rs  vertex.rs
engine/harmony/: Cargo.toml  build.rs
engine/harmony/native/: CMakeLists.txt  hezhou_native.cpp
engine/harmony/native/include/: hezhou_native.h
engine/harmony/src/: event_bus.rs  event_types.rs  lib.rs  native_window.rs
engine/physics/: Cargo.toml
engine/physics/src/: collider.rs  ffi.rs  lib.rs  raycast.rs  rigid_body.rs  world.rs
engine/platform/: Cargo.toml  build.rs
engine/platform/src/: event.rs  glfw_backend.rs  harmony_backend.rs  lib.rs  traits.rs  window.rs
engine/render/: Cargo.toml
engine/render/src/: camera.rs  color.rs  ffi.rs  lib.rs  material.rs  mesh.rs  renderer.rs  surface.rs  texture.rs
engine/rhi/: Cargo.toml
engine/rhi-vulkan/: Cargo.toml
engine/rhi-vulkan/src/: buffer.rs  context.rs  demo.rs  device.rs  lib.rs  mono_rotation_renderer.rs  pipeline.rs  renderer.rs  rotation_renderer.rs  swapchain.rs  triangle_demo.rs  ui_renderer.rs  ui_vulkan_renderer.rs
engine/rhi/src/: buffer.rs  command.rs  device.rs  error.rs  framebuffer.rs  handle.rs  lib.rs  pass.rs  pipeline.rs  shader.rs  swapchain.rs  texture.rs  ui.rs
engine/scripting/: Cargo.toml  build.rs
engine/scripting/examples/: integration_test.rs
engine/scripting/src/: callback_registry.rs  callback_types.rs  error.rs  executor.rs  ffi.rs  ffi_context.rs  lib.rs  mono_executor.rs  mono_ui_executor.rs  native_aot_executor.rs  script_manager.rs  script_manager_lite.rs  value_bridge.rs
engine/scripting/tests/: ffi_test.rs  registry_test.rs  standalone_test.rs
engine/scripting/tests/basic/: callback_test.rs
engine/scripts/: ButtonClickTest.cs  DFX.cs  EditorScript.cs  MonoUIScript.cs  RotationScript.Mono.csproj  RotationScript.cs  RotationScript.csproj  TestScript.cs  UI.cs  UIScript.cs  build_mono.bat  build_mono.ps1  build_mono_ui.ps1  build_ui_mono.ps1
engine/shaders/: fxaa.frag  fxaa.frag.spv  fxaa.vert  fxaa.vert.spv  rotation.vert  rotation.vert.spv  triangle.vert
engine/shaders/ui/: display_texture.frag  display_texture.frag.spv  display_texture.vert  display_texture.vert.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv
engine/ui/: Cargo.toml
engine/ui/docs/: TextEdit_Technical_Doc.md
engine/ui/examples/: ui_demo.rs
engine/ui/src/: animation.rs  animation_engine.rs  canvas.rs  event.rs  event_dispatcher.rs  ffi.rs  font_atlas.rs  gesture.rs  gesture_recognizer.rs  layout.rs  lib.rs  msdf.rs  platform.rs  style.rs  thunk_manager.rs  types.rs  widget.rs  widget_tree.rs
engine/ui/src/platform/: input_handler.rs
engine/ui/src/widgets/: button.rs  hstack.rs  label.rs  mod.rs  panel.rs  preview_window.rs  text_edit.rs  vstack.rs
scripts/: NativeMethods.cs  PluginBase.cs  ScriptValue.cs
scripts/examples/: BidirectionalTest.cs  Examples.csproj  HarmonyOSPlugin.cs  TestPlugin.cs
