[package]
name = "hezhou-examples"
version = "0.1.0"
edition = "2021"

[features]
default = ["mono"]
mono = ["hezhou-scripting/mono", "hezhou-rhi-vulkan/mono"]
native-aot = ["hezhou-scripting/native-aot"]

[dependencies]
hezhou-scripting = { path = "../scripting", default-features = false }
hezhou-core = { path = "../core" }
hezhou-platform = { path = "../platform", features = ["glfw"] }
hezhou-rhi-vulkan = { path = "../rhi-vulkan" }
hezhou-ui = { path = "../ui" }
hezhou-dfx = { path = "../dfx" }
hezhou-rhi = { path = "../rhi" }
glfw = "0.62"
ash = "0.38"
parking_lot = "0.12"
bytemuck = "1.14"
chrono = "0.4"
serde_json = "1.0"

[[bin]]
name = "engine_demo"
path = "src/engine_demo.rs"

[[bin]]
name = "glfw_demo"
path = "src/glfw_demo.rs"

[[bin]]
name = "vulkan_triangle_demo"
path = "src/vulkan_triangle_demo.rs"

[[bin]]
name = "vulkan_render_demo"
path = "src/vulkan_render_demo.rs"

[[bin]]
name = "triangle_demo"
path = "src/triangle_demo.rs"

[[bin]]
name = "rotation_demo"
path = "src/rotation_demo.rs"
required-features = ["native-aot"]

[[bin]]
name = "mono_rotation_demo"
path = "src/mono_rotation_demo.rs"
required-features = ["mono"]

[[bin]]
name = "mono_hot_reload_test"
path = "src/mono_hot_reload_test.rs"
required-features = ["mono"]

[[bin]]
name = "mono_triangle_demo"
path = "src/mono_triangle_demo.rs"
required-features = ["mono"]

[[bin]]
name = "ui_vulkan_demo"
path = "src/ui_vulkan_demo.rs"

[[bin]]
name = "mono_ui_demo"
path = "src/mono_ui_demo.rs"
required-features = ["mono"]

[[bin]]
name = "mono_ui_thunk_demo"
path = "src/mono_ui_thunk_demo.rs"
required-features = ["mono"]

[[bin]]
name = "mono_editor_demo"
path = "src/mono_editor_demo.rs"
required-features = ["mono"]

[[bin]]
name = "trace_viewer_demo"
path = "src/trace_viewer_demo.rs"