[package]
name = "hezhou-rhi-vulkan"
version = "0.1.0"
edition = "2021"

[lib]
name = "hezhou_rhi_vulkan"
path = "src/lib.rs"

[dependencies]
hezhou-core = { path = "../core" }
hezhou-geometry = { path = "../geometry" }
hezhou-rhi = { path = "../rhi" }
ash = "0.38"
gpu-allocator = "0.27"
parking_lot = "0.12"
raw-window-handle = "0.6"

[dev-dependencies]