[package]
name = "hezhou-rhi-vulkan"
version = "0.1.0"
edition = "2021"

[lib]
name = "hezhou_rhi_vulkan"
path = "src/lib.rs"

[dependencies]
hezhou-core = { path = "../core" }
hezhou-geometry = { path = "../geometry" }
hezhou-rhi = { path = "../rhi" }
ash = "0.38"
glfw = { version = "0.62", default-features = false, features = ["src-build", "vulkan", "raw-window-handle-v0-6", "native-handles"] }

[dev-dependencies]