[package]
name = "hezhou-rhi-vulkan"
version = "0.1.0"
edition = "2021"

[lib]
name = "hezhou_rhi_vulkan"
path = "src/lib.rs"

[features]
default = []
mono = ["hezhou-scripting/mono"]

[dependencies]
hezhou-core = { path = "../core" }
hezhou-geometry = { path = "../geometry" }
hezhou-rhi = { path = "../rhi" }
hezhou-ui = { path = "../ui" }
hezhou-platform = { path = "../platform" }
hezhou-dfx = { path = "../dfx" }
hezhou-scripting = { path = "../scripting", default-features = false }
ash = "0.38"
bytemuck = "1.14"
glfw = { version = "0.62", default-features = false, features = ["src-build", "vulkan", "raw-window-handle-v0-6", "native-handles"] }
libloading = "0.8"
parking_lot = "0.12"
image = "0.25"

[dev-dependencies]