[package]
name = "hezhou-scripting"
version = "0.1.0"
edition = "2021"

[lib]
name = "hezhou_scripting"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["mono"]
mono = ["wrapped_mono"]
native-aot = ["libloading"]

[dependencies]
parking_lot = "0.12"
wrapped_mono = { version = "0.3.1", optional = true }
libloading = { version = "0.8", optional = true }

[dev-dependencies]

[[test]]
name = "registry_test"
path = "tests/registry_test.rs"