[package]
name = "hezhou-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
hezhou-core = { path = "../core" }
hezhou-dfx = { path = "../dfx" }
hezhou-rhi = { path = "../rhi" }
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4", "serde"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "ui_demo"
path = "examples/ui_demo.rs"

[features]
default = []
debug_visualization = []