[package]
name = "hezhou-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
hezhou-core = { path = "../core" }
hezhou-dfx = { path = "../dfx" }
hezhou-rhi = { path = "../rhi" }
hezhou-platform = { path = "../platform" }
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4", "serde"] }
fontdue = "0.9"
unicode-segmentation = "1.13.2"

[features]
default = []
msdf = ["dep:fdsm", "dep:fdsm-ttf-parser", "dep:ttf-parser"]
debug_visualization = []

[dependencies.fdsm]
version = "0.8"
optional = true

[dependencies.fdsm-ttf-parser]
version = "0.2"
optional = true

[dependencies.ttf-parser]
version = "0.24"
optional = true

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "ui_demo"
path = "examples/ui_demo.rs"
